# prompt-genome

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: classifier.py  cli_demo.py  summarization.py
prompt_genome/: __init__.py  cli.py  evolver.py  genome.py  operators.py  selection.py
src/prompt_genome/: __init__.py  cli.py  genome.py  operators.py  optimizer.py  selection.py
tests/: test_cli.py  test_evolver.py  test_genome.py  test_operators.py  test_optimizer.py  test_selection.py
